cmake_minimum_required(VERSION 3.10)
find_package(Git REQUIRED)
if(LINUX)
    set(CMAKE_TEMP_PATH /tmp)
elseif(WIN32)
    set(CMAKE_TEMP_PATH $ENV{TMP})
endif()
cmake_path(APPEND CMAKE_APPEND_MODULE ${CMAKE_TEMP_PATH} cmake_module)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_APPEND_MODULE} ${CMAKE_MODULE_PATH})
if(NOT EXISTS ${CMAKE_APPEND_MODULE})
execute_process(COMMAND ${GIT_EXECUTABLE} clone https://github.com/yingquelou/cmakeModule.git ${CMAKE_APPEND_MODULE}
COMMAND_ECHO STDOUT)
endif()
cmake_path(GET CMAKE_CURRENT_LIST_DIR FILENAME PROJ)
project(${PROJ})
include(router)
if(MINGW)
    add_link_options(-static)
endif()
router_directories()